MiniML-Comp/_build/default/impparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On error shift to state 1
-- On VAR shift to state 2
-- On variable_decl shift to state 5
-- On program shift to state 7
-- On list(variable_decl) shift to state 8
## Reductions:
-- On MAIN FUNCTION
--   reduce production list(variable_decl) ->

State 1:
## Known stack suffix:
## error
## LR(1) items:
program -> error . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> error

State 2:
## Known stack suffix:
## VAR
## LR(1) items:
variable_decl -> VAR . IDENT SEMI [ WHILE VAR STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND ]
## Transitions:
-- On IDENT shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## VAR IDENT
## LR(1) items:
variable_decl -> VAR IDENT . SEMI [ WHILE VAR STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND ]
## Transitions:
-- On SEMI shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## VAR IDENT SEMI
## LR(1) items:
variable_decl -> VAR IDENT SEMI . [ WHILE VAR STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND ]
## Transitions:
## Reductions:
-- On WHILE VAR STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND
--   reduce production variable_decl -> VAR IDENT SEMI

State 5:
## Known stack suffix:
## variable_decl
## LR(1) items:
list(variable_decl) -> variable_decl . list(variable_decl) [ WHILE STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND ]
## Transitions:
-- On VAR shift to state 2
-- On variable_decl shift to state 5
-- On list(variable_decl) shift to state 6
## Reductions:
-- On WHILE STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND
--   reduce production list(variable_decl) ->

State 6:
## Known stack suffix:
## variable_decl list(variable_decl)
## LR(1) items:
list(variable_decl) -> variable_decl list(variable_decl) . [ WHILE STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND ]
## Transitions:
## Reductions:
-- On WHILE STAR SBRK RETURN PUTCHAR NOT MINUS MAIN LPAR INT IF IDENT FUNCTION END BOOL AMPERSAND
--   reduce production list(variable_decl) -> variable_decl list(variable_decl)

State 7:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 8:
## Known stack suffix:
## list(variable_decl)
## LR(1) items:
program -> list(variable_decl) . list(function_def) main EOF [ # ]
## Transitions:
-- On FUNCTION shift to state 9
-- On list(function_def) shift to state 128
-- On function_def shift to state 135
## Reductions:
-- On MAIN
--   reduce production list(function_def) ->

State 9:
## Known stack suffix:
## FUNCTION
## LR(1) items:
function_def -> FUNCTION . IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR BEGIN list(variable_decl) list(instruction) END [ MAIN FUNCTION ]
## Transitions:
-- On IDENT shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## FUNCTION IDENT
## LR(1) items:
function_def -> FUNCTION IDENT . LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR BEGIN list(variable_decl) list(instruction) END [ MAIN FUNCTION ]
## Transitions:
-- On LPAR shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## FUNCTION IDENT LPAR
## LR(1) items:
function_def -> FUNCTION IDENT LPAR . loption(separated_nonempty_list(COMMA,IDENT)) RPAR BEGIN list(variable_decl) list(instruction) END [ MAIN FUNCTION ]
## Transitions:
-- On IDENT shift to state 12
-- On separated_nonempty_list(COMMA,IDENT) shift to state 15
-- On loption(separated_nonempty_list(COMMA,IDENT)) shift to state 16
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,IDENT)) ->

State 12:
## Known stack suffix:
## IDENT
## LR(1) items:
separated_nonempty_list(COMMA,IDENT) -> IDENT . [ RPAR ]
separated_nonempty_list(COMMA,IDENT) -> IDENT . COMMA separated_nonempty_list(COMMA,IDENT) [ RPAR ]
## Transitions:
-- On COMMA shift to state 13
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT

State 13:
## Known stack suffix:
## IDENT COMMA
## LR(1) items:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA . separated_nonempty_list(COMMA,IDENT) [ RPAR ]
## Transitions:
-- On IDENT shift to state 12
-- On separated_nonempty_list(COMMA,IDENT) shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## IDENT COMMA separated_nonempty_list(COMMA,IDENT)
## LR(1) items:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT)

State 15:
## Known stack suffix:
## separated_nonempty_list(COMMA,IDENT)
## LR(1) items:
loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT)

State 16:
## Known stack suffix:
## FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT))
## LR(1) items:
function_def -> FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) . RPAR BEGIN list(variable_decl) list(instruction) END [ MAIN FUNCTION ]
## Transitions:
-- On RPAR shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR
## LR(1) items:
function_def -> FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR . BEGIN list(variable_decl) list(instruction) END [ MAIN FUNCTION ]
## Transitions:
-- On BEGIN shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR BEGIN
## LR(1) items:
function_def -> FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR BEGIN . list(variable_decl) list(instruction) END [ MAIN FUNCTION ]
## Transitions:
-- On VAR shift to state 2
-- On variable_decl shift to state 5
-- On list(variable_decl) shift to state 19
## Reductions:
-- On WHILE STAR SBRK RETURN PUTCHAR NOT MINUS LPAR INT IF IDENT END BOOL AMPERSAND
--   reduce production list(variable_decl) ->

State 19:
## Known stack suffix:
## FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR BEGIN list(variable_decl)
## LR(1) items:
function_def -> FUNCTION IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR BEGIN list(variable_decl) . list(instruction) END [ MAIN FUNCTION ]
## Transitions:
-- On WHILE shift to state 20
-- On STAR shift to state 86
-- On SBRK shift to state 23
-- On RETURN shift to state 91
-- On PUTCHAR shift to state 94
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IF shift to state 99
-- On IDENT shift to state 104
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On list(instruction) shift to state 126
-- On instruction shift to state 114
-- On expression shift to state 116
## Reductions:
-- On END
--   reduce production list(instruction) ->

State 20:
## Known stack suffix:
## WHILE
## LR(1) items:
instruction -> WHILE . LPAR expression RPAR BEGIN list(instruction) END [ WHILE STAR SBRK RETURN PUTCHAR NOT MINUS LPAR INT IF IDENT END BOOL AMPERSAND ]
## Transitions:
-- On LPAR shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## WHILE LPAR
## LR(1) items:
instruction -> WHILE LPAR . expression RPAR BEGIN list(instruction) END [ WHILE STAR SBRK RETURN PUTCHAR NOT MINUS LPAR INT IF IDENT END BOOL AMPERSAND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 83
## Reductions:

State 22:
## Known stack suffix:
## STAR
## LR(1) items:
expression -> STAR . expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 82
## Reductions:

State 23:
## Known stack suffix:
## SBRK
## LR(1) items:
expression -> SBRK . LPAR expression RPAR [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On LPAR shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## SBRK LPAR
## LR(1) items:
expression -> SBRK LPAR . expression RPAR [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 80
## Reductions:

State 25:
## Known stack suffix:
## NOT
## LR(1) items:
expression -> NOT . expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 79
## Reductions:

State 26:
## Known stack suffix:
## MINUS
## LR(1) items:
expression -> MINUS . expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 78
## Reductions:

State 27:
## Known stack suffix:
## LPAR
## LR(1) items:
expression -> LPAR . expression RPAR [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> LPAR . expression RPAR LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 73
## Reductions:

State 28:
## Known stack suffix:
## INT
## LR(1) items:
expression -> INT . [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND
--   reduce production expression -> INT

State 29:
## Known stack suffix:
## IDENT
## LR(1) items:
expression -> IDENT . [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> IDENT . LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On LPAR shift to state 30
## Reductions:
-- On STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND
--   reduce production expression -> IDENT

State 30:
## Known stack suffix:
## IDENT LPAR
## LR(1) items:
expression -> IDENT LPAR . loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On separated_nonempty_list(COMMA,expression) shift to state 34
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 35
-- On expression shift to state 37
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 31:
## Known stack suffix:
## BOOL
## LR(1) items:
expression -> BOOL . [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND
--   reduce production expression -> BOOL

State 32:
## Known stack suffix:
## AMPERSAND
## LR(1) items:
expression -> AMPERSAND . IDENT [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On IDENT shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## AMPERSAND IDENT
## LR(1) items:
expression -> AMPERSAND IDENT . [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND
--   reduce production expression -> AMPERSAND IDENT

State 34:
## Known stack suffix:
## separated_nonempty_list(COMMA,expression)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression)

State 35:
## Known stack suffix:
## IDENT LPAR loption(separated_nonempty_list(COMMA,expression))
## LR(1) items:
expression -> IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) . RPAR [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On RPAR shift to state 36
## Reductions:

State 36:
## Known stack suffix:
## IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR
## LR(1) items:
expression -> IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR . [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND
--   reduce production expression -> IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR

State 37:
## Known stack suffix:
## expression
## LR(1) items:
expression -> expression . PLUS expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . MINUS expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . STAR expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . SLASH expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . PRCT expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LSL expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LSR expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . EQ expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . NEQ expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LT expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LE expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . GT expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . GE expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . AND expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . OR expression [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LBRACKET expression RBRACKET [ STAR SLASH RPAR PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
separated_nonempty_list(COMMA,expression) -> expression . [ RPAR ]
separated_nonempty_list(COMMA,expression) -> expression . COMMA separated_nonempty_list(COMMA,expression) [ RPAR ]
## Transitions:
-- On STAR shift to state 38
-- On SLASH shift to state 44
-- On PRCT shift to state 49
-- On PLUS shift to state 51
-- On OR shift to state 53
-- On NEQ shift to state 55
-- On MINUS shift to state 57
-- On LT shift to state 59
-- On LSR shift to state 40
-- On LSL shift to state 46
-- On LE shift to state 61
-- On LBRACKET shift to state 42
-- On GT shift to state 63
-- On GE shift to state 65
-- On EQ shift to state 67
-- On COMMA shift to state 71
-- On AND shift to state 69
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,expression) -> expression

State 38:
## Known stack suffix:
## expression STAR
## LR(1) items:
expression -> expression STAR . expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## expression STAR expression
## LR(1) items:
expression -> expression . PLUS expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . MINUS expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . STAR expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression STAR expression . [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . SLASH expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . PRCT expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LSL expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LSR expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . EQ expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . NEQ expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LT expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LE expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . GT expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . GE expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . AND expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . OR expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LBRACKET expression RBRACKET [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On LSR shift to state 40
-- On LSL shift to state 46
-- On LBRACKET shift to state 42
## Reductions:
-- On STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LE GT GE EQ COMMA AND
--   reduce production expression -> expression STAR expression

State 40:
## Known stack suffix:
## expression LSR
## LR(1) items:
expression -> expression LSR . expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## expression LSR expression
## LR(1) items:
expression -> expression . PLUS expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . MINUS expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . STAR expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . SLASH expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . PRCT expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LSL expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LSR expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression LSR expression . [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . EQ expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . NEQ expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LT expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LE expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . GT expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . GE expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . AND expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . OR expression [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
expression -> expression . LBRACKET expression RBRACKET [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On LBRACKET shift to state 42
## Reductions:
-- On STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE GT GE EQ COMMA AND
--   reduce production expression -> expression LSR expression

State 42:
## Known stack suffix:
## expression LBRACKET
## LR(1) items:
expression -> expression LBRACKET . expression RBRACKET [ STAR SLASH SET SEMI RPAR RBRACKET PRCT PLUS OR NEQ MINUS LT LSR LSL LE LBRACKET GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 22
-- On SBRK shift to state 23
-- On NOT shift to state 25
-- On MINUS shift to state 26
-- On LPAR shift to state 27
-- On INT shift to state 28
-- On IDENT shift to state 29
-- On BOOL shift to state 31
-- On AMPERSAND shift to state 32
-- On expression shift to state 43
## Reductions:
